--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,6 +11,7 @@ $config: (
                 'white': #ffffff,
                 'black': #000000,
                 'gray': #f1f2f2,
+                'gray-dark': #979797,
                 'purple': #550066,
                 'purple-light': #990099,
                 'red': #ed1c24,
