Add Header component for any box section

--- a/src/style/components/common/typography/_typography.scss
+++ b/src/style/components/common/typography/_typography.scss
@@ -11,23 +11,35 @@ $copy: "typography";
   }
 
   &--h3 {
+    font-size: config('size', 'heading-3');
+  }
 
+  &--copy-xl {
+    font-size: config('size', 'body-xl');
   }
 
   &--copy-lg {
-
+    font-size: config('size', 'body-lg');
   }
 
   &--copy-md {
-
+    font-size: config('size', 'body-md');
   }
 
   &--copy-sm {
+    font-size: config('size', 'body-sm');
+  }
 
+  &--copy-xs {
+    font-size: config('size', 'body-xs');
   }
 
   &--white {
+    color: config('color', 'white');
+  }
 
+  &--gray {
+    color: config('color', 'gray');
   }
 
   &--purple {
@@ -42,23 +54,28 @@ $copy: "typography";
     color: config('color', 'red');
   }
 
-  &--light {
+  &--x-light {
+    font-weight: config('weight', 'x-light');
+  }
 
+  &--light {
+    font-weight: config('weight', 'light');
   }
 
   &--regular {
-
+    font-weight: config('weight', 'regular');
   }
 
   &--bold {
-
+    font-weight: config('weight', 'bold');
   }
 
 }
 
+// Global style for typography
 h1,
 h2,
-h3 {
+h3{
   font-family: config('family', 'heading');
   margin: 0;
 }
@@ -66,4 +83,8 @@ h3 {
 p {
   font-family: config('family', 'copy');
   margin: 0;
+}
+
+span{
+  font-family: config('family', 'heading');
 }
