--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,7 +10,7 @@ $config: (
                 'transparent': rgba(0, 0, 0, 0),
                 'white': #ffffff,
                 'black': #000000,
-                'gray': #f1f2f2,
+                'gray': #cccccc,
                 'purple': #550066,
                 'purple-light': #990099,
                 'red': #ed1c24,
@@ -41,9 +41,11 @@ $config: (
                 'heading-1': 30px,
                 'heading-2': 22px,
                 'heading-3': 20px,
-                'body-1':    20px,
-                'body-2':    16px,
-                'body-3':    14px
+                'body-xl':    26px,
+                'body-lg':    22px,
+                'body-md':    16px,
+                'body-sm':    12px,
+                'body-xs':    12px
         ),
         'weight': (
                 'x-light':   100,
