Add Footer and Socials icon

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,6 +10,7 @@ $config: (
                 'transparent': rgba(0, 0, 0, 0),
                 'white': #ffffff,
                 'black': #000000,
+                'black-light': #545353,
                 'gray': #f1f2f2,
                 'gray-dark': #979797,
                 'purple': #550066,
