--- a/src/style/components/index.scss
+++ b/src/style/components/index.scss
@@ -1,11 +1,9 @@
 /* Common/Assets */
 @import './common/assets/icon';
 @import './common/assets/image';
+@import './common/icons/fontello';
 /* Button */
 @import './common/button/index';
-@import './common/button/icon-button';
-@import './common/button/link-button';
-@import './common/button/text-button';
 /* Form */
 @import './common/form/input-text';
 /* Typography */
