--- a/src/style/libs/_bootstrap.scss
+++ b/src/style/libs/_bootstrap.scss
@@ -52,5 +52,5 @@
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
-//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
