Add and set all style

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,6 +11,7 @@ $config: (
                 'white': #ffffff,
                 'black': #000000,
                 'black-light': #545353,
+                'gray-light': #aaaaaa,
                 'gray': #f1f2f2,
                 'gray-dark': #979797,
                 'purple': #550066,
@@ -45,9 +46,9 @@ $config: (
                 'heading-3': 22px,
                 'body-xl':    26px,
                 'body-lg':    22px,
-                'body-md':    16px,
+                'body-md':    15px,
                 'body-sm':    12px,
-                'body-xs':    12px
+                'body-xs':    11px
         ),
         'weight': (
                 'x-light':   100,
