--- a/src/style/components/global/box.scss
+++ b/src/style/components/global/box.scss
@@ -3,7 +3,8 @@ $component: "box";
 .#{$component} {
 
   &--large{
-    padding: config('gutter') * 1.5 config('gutter') * 2;
+    padding: config('gutter') * 0.75 config('gutter') * 2;
+    padding-bottom: config('gutter') * 1.25;
     margin-bottom: config('gutter') * 1.5;
   }
 
