--- a/src/style/components/global/nav-bar.scss
+++ b/src/style/components/global/nav-bar.scss
@@ -2,22 +2,30 @@ $component: "navbar";
 
 .#{$component} {
 
-  &-default{
+  -webkit-box-shadow: 0px 1px 13px -1px rgba(117,117,117,1);
+  -moz-box-shadow: 0px 1px 13px -1px rgba(117,117,117,1);
+  box-shadow: 0px 1px 13px -1px rgba(117,117,117,1);
+
+  margin-bottom: config('gutter') * 2.25;
+
+  &-default {
     background-color: config('color', 'gray');
   }
 
-  &-header{
-    padding: config('gutter') 0;
+  &-header {
+    padding: config('gutter') * 0.7 0;
     width: config('width', 'full');
   }
 
-  &-brand{
+  &-brand {
     height: config('height', 'full');
   }
 
-  &-right{
-
+  &-title {
+    float: right;
     margin-top: config('gutter') * 1.5;
+    font-size: config('size', 'heading-1') * 0.93;
+    font-weight: bold;
 
     @include breakpoint('tablet') {
       margin-right: 0;
