--- a/src/style/components/common/button/index.scss
+++ b/src/style/components/common/button/index.scss
@@ -2,6 +2,8 @@ $component: "btn";
 
 .#{$component} {
 
+  font-family: config('family', 'copy');
+  font-size: config('size', 'body-md');
   text-transform: uppercase;
   border-radius: 0;
 
@@ -16,12 +18,14 @@ $component: "btn";
     font-weight: config('weight', 'regular');
     font-size: config('size', 'body-md') + 1 ;
     background-color: config('color', 'purple-light');
-    padding: config('gutter') * 0.25 config('gutter') * 0.5;
+    padding: config('gutter') * 0.15 config('gutter') * 0.35;
     line-height: config('gutter') * 0.85;
     border-radius: config('gutter') * 0.35;
+    transition: background-color 0.5s;
 
     &:hover{
-      color: config('color', 'gray');
+      color: config('color', 'white');
+      background-color: lighten(config('color', 'purple'), 10%);
     }
   }
 
@@ -29,13 +33,15 @@ $component: "btn";
     color: config('color', 'white');
     font-weight: config('weight', 'regular');
     font-size: config('size', 'body-md') + 1 ;
-    background-color: config('color', 'gray-dark');
-    padding: config('gutter') * 0.25 config('gutter') * 0.5;
+    background-color: config('color', 'gray-light');
+    padding: config('gutter') * 0.15 config('gutter') * 0.35;
     line-height: config('gutter') * 0.85;
     border-radius: config('gutter') * 0.35;
+    transition: background-color 0.5s;
 
     &:hover{
-      color: config('color', 'gray');
+      color: config('color', 'white');
+      background-color: lighten(config('color', 'gray-light'), 10%);
     }
   }
 
@@ -47,9 +53,11 @@ $component: "btn";
     padding: config('gutter') * 0.35 config('gutter') * 0.65;
     line-height: config('gutter') * 1.1;
     border-radius: config('gutter') * 0.35;
+    transition: background-color 0.5s;
 
     &:hover{
-      color: config('color', 'gray');
+      color: config('color', 'white');
+      background-color: lighten(config('color', 'blue'), 10%);
     }
   }
 
