--- a/src/style/layouts/secure-negotiation-centre-page/components/buyer-details.scss
+++ b/src/style/layouts/secure-negotiation-centre-page/components/buyer-details.scss
@@ -11,7 +11,11 @@ $component: "buyer-details";
   }
 
   &__label{
+    display: block !important;
 
+    @include breakpoint('tablet') {
+      display: inline-block !important;
+    }
   }
 
   &__info{
