--- a/src/style/components/global/footer.scss
+++ b/src/style/components/global/footer.scss
@@ -1,9 +1,21 @@
 $copy: "footer";
 
 .#{$copy} {
-
+  float: none !important;
+  text-align: center;
   background-color: config('color', 'black-light');
   padding: config('gutter') * 0.55 0;
+
+  nav{
+    margin-bottom: config('gutter') * 1.5;
+    @include breakpoint('mobile') {
+      float: none !important;
+    }
+
+    @include breakpoint('tablet') {
+      margin-bottom: 0;
+    }
+  }
 
   .nav-item{
     padding-left: 0;
@@ -21,6 +33,9 @@ $copy: "footer";
   }
 
   .socials{
+    float: none !important;
+    text-align: center;
+    margin-bottom: config('gutter') * 1.5;
 
     &__item{
       padding: 0 config('gutter') * 0.25;
@@ -33,6 +48,11 @@ $copy: "footer";
       &:hover{
         color: config('color', 'gray');
       }
+    }
+
+    @include breakpoint('tablet') {
+      float: right !important;
+      margin-bottom: 0;
     }
   }
 
