--- a/src/style/libs/_bootstrap.scss
+++ b/src/style/libs/_bootstrap.scss
@@ -11,7 +11,7 @@
 // Reset and dependencies
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/print";
-//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+//@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
@@ -23,7 +23,7 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
-//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
@@ -49,7 +49,7 @@
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
-//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
+//@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
