Complete Hide and show event

--- a/src/style/layouts/secure-negotiation-centre-page/components/buyer-details.scss
+++ b/src/style/layouts/secure-negotiation-centre-page/components/buyer-details.scss
@@ -36,6 +36,10 @@ $component: "buyer-details";
     background-color: transparent;
     border: none;
     text-transform: uppercase;
+
+    i{
+      margin-left: config('gutter') * 0.25;
+    }
   }
 
 }
