Add validation in input offer

--- a/src/style/components/common/icons/fontello-codes.scss
+++ b/src/style/components/common/icons/fontello-codes.scss
@@ -4,3 +4,5 @@
 .icon-youtube:before { content: '\e802'; } /* '' */
 .icon-twitter:before { content: '\e803'; } /* '' */
 .icon-facebook:before { content: '\e804'; } /* '' */
+.icon-down-open:before { content: '\f004'; } /* '' */
+.icon-up-open:before { content: '\f005'; } /* '' */
