--- a/src/style/components/common/icons/fontello.scss
+++ b/src/style/components/common/icons/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../assets/fonts/fontello.eot?46963943');
-  src: url('../assets/fonts/fontello.eot?46963943#iefix') format('embedded-opentype'),
-       url('../assets/fonts/fontello.woff2?46963943') format('woff2'),
-       url('../assets/fonts/fontello.woff?46963943') format('woff'),
-       url('../assets/fonts/fontello.ttf?46963943') format('truetype'),
-       url('../assets/fonts/fontello.svg?46963943#fontello') format('svg');
+  src: url('../../src/assets/fonts/fontello.eot?36614780');
+  src: url('../../src/assets/fonts/fontello.eot?36614780#iefix') format('embedded-opentype'),
+       url('../../src/assets/fonts/fontello.woff2?36614780') format('woff2'),
+       url('../../src/assets/fonts/fontello.woff?36614780') format('woff'),
+       url('../../src/assets/fonts/fontello.ttf?36614780') format('truetype'),
+       url('../../src/assets/fonts/fontello.svg?36614780#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?46963943#fontello') format('svg');
+    src: url('../font/fontello.svg?36614780#fontello') format('svg');
   }
 }
 */
@@ -60,3 +60,5 @@
 .icon-youtube:before { content: '\e802'; } /* '' */
 .icon-twitter:before { content: '\e803'; } /* '' */
 .icon-facebook:before { content: '\e804'; } /* '' */
+.icon-down-open:before { content: '\f004'; } /* '' */
+.icon-up-open:before { content: '\f005'; } /* '' */
