--- a/src/style/components/index.scss
+++ b/src/style/components/index.scss
@@ -19,7 +19,7 @@
 @import './global/box';
 @import './global/box-header';
 @import './global/footer';
-@import './global/nav-bar';
+@import './global/header';
 
 
 /* NavBar */
