fix style in mobile size

--- a/src/style/components/global/box.scss
+++ b/src/style/components/global/box.scss
@@ -3,9 +3,13 @@ $component: "box";
 .#{$component} {
 
   &--large{
-    padding: config('gutter') * 0.75 config('gutter') * 2;
+    padding: config('gutter') * 0.75 config('gutter') * 0.75;
     padding-bottom: config('gutter') * 1.25;
     margin-bottom: config('gutter') * 1.5;
+
+    @include breakpoint('tablet') {
+      padding: config('gutter') * 0.75 config('gutter') * 2;
+    }
   }
 
   &--small{
